# diit-prog-pr2

./: CMakeLists.txt  README.md
include/: config.h  equality.h  intersection.h  point.h  rectangle.h  segment.h
src/: main.cpp
src/lib/: intersection.cpp  point.cpp  rectangle.cpp  segment.cpp
tests/: intersection_tests.cpp  point_tests.cpp  rectangle_tests.cpp
